# onlinejudge_c_cpp

./: .gitattributes  .gitattributes.gerosan  .gitignore  .gitignore.gerosan  CMakeLists.txt  CMakeLists.txt.gerosan  README.md  README.md.gerosan
Example/: example_struct.cpp
URI/: Note.txt  P1883.cpp  P1883_Escape_From_Ayutthaya.c  P1883_Escape_From_Ayutthaya.cpp  P2500_William_Xorando.c  test.cpp
URI/Accepted_CPP/: P2720_Large_Presents.cpp
URI/Trying/: P2556_CEIs_Reopening.cpp
URI/Trying_C/: P1883_Escape_From_Ayutthaya.c
URI/Trying_CPP/: P1764_Itinerary_of_Santa_Claus.cpp  P1764_Routers.cpp
