cmake_minimum_required(VERSION 3.6)
project(onlinejudge_c_cpp)

#accpeted C
add_executable (uri_P2692_c "uri/accepted_c/P2692_Zoeiro_Keyboard.c")
add_executable (uri_p1569_c "uri/accepted_c/P1569_Snakes_and_Ladders.c")

#accepted CPP
add_executable (uri_p1883_cpp "URI/accepted_cpp/P1883_Escape_From_Ayutthaya.cpp")
add_executable (uri_p1912_cpp "URI/accepted_cpp/P1912_Help_Seu_Madruga.cpp")
add_executable (uri_P1907_cpp "URI/accepted_cpp/P1907_Colouring_Game_Scenarios.cpp")
add_executable (uri_P1764_cpp "uri/accepted_cpp/P1764_Itinerary_of_Santa_Claus.cpp")
add_executable (uri_P2758_cpp "URI/Accepted_CPP/P2758_Floating_Number_Input_and_Output.cpp")
add_executable (uri_P2720_cpp "URI/Accepted_CPP/P2720_Large_Presents.cpp")
add_executable (uri_p2916_cpp "URI/Accepted_CPP/P2916_The_Note.cpp")

#trying C
add_executable (uri_P2500_c "uri/trying_c/P2500_William_Xorando.c")
add_executable (uri_p1883_c "uri/trying_c/P1883_Escape_From_Ayutthaya.c")

#trying CPP
