add_executable(P3046_Domino URI/Accepted_CPP/P3046_Domino.cpp)
add_executable(P3046_Domino_c URI/Accepted_C/P3046_Domino.c)
add_executable(P3040_The_Christmas_Tree_cpp URI/Accepted_CPP/P3040_The_Christmas_Tree.cpp)
add_executable(P3040_The_Christmas_Tree_c URI/Accepted_C/P3040_The_Christmas_Tree.c)



add_executable(P2556  URI/Trying/P2556_CEIs_Reopening.cpp)