add_executable(P3046_Domino URI/Accepted_CPP/P3046_Domino.cpp)
add_executable(P3046_Domino_c URI/Accepted_C/P3046_Domino.c)
add_executable(P3040_The_Christmas_Tree_cpp URI/Accepted_CPP/P3040_The_Christmas_Tree.cpp)
add_executable(P3040_The_Christmas_Tree_c URI/Accepted_C/P3040_The_Christmas_Tree.c)



add_executable(P2556  URI/Trying/P2556_CEIs_Reopening.cpp)
add_executable(P3047_cpp  URI/Accepted_CPP/P3047.cpp)
add_executable(P3047_c URI/Accepted_C/P3047.c)
add_executable(P3053_c URI/Accepted_C/P3053.c)
add_executable(P3037_c URI/Accepted_C/P3037.c)
add_executable(P3053_cpp URI/Accepted_CPP/P3053.cpp)
add_executable(P3037_cpp URI/Accepted_CPP/P3037.cpp)
add_executable(P3038_c URI/Accepted_C/P3038.c)
add_executable(P3038_cpp URI/Accepted_CPP/P3038.cpp)

add_executable(P3039_c URI/Accepted_C/P3039.c)
add_executable(P3039_cpp URI/Accepted_CPP/P3039.cpp)